--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   http: ^0.13.5
   chopper: ^6.1.1
   logging: ^1.1.1
+  provider: ^6.0.5
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
