--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
   logging: ^1.1.1
   provider: ^6.0.5
   equatable: ^2.0.5
+  sqflite: ^2.2.6
+  path_provider: ^2.0.14
+  synchronized: ^3.0.1
+  sqlbrite: ^2.6.0
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
